# team-006-vin20k

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.codex/: hooks.json
.codex/skills/literature-review/: .skillfish.json
.gemini/skills/literature-review/: SKILL.md
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: epic-1-context.md  spec-1-setup-hooks-and-agents-entry.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
ai20k-build-phase/: AGENT.md  PROGRESS.md  design-preview.html
ai20k-build-phase/buildflow/: CLAUDE.md
ai20k-build-phase/buildflow/_templates/: 00-idea.md  01-research.md  02-scope.md  03-prd.md  04-adr.md  05-contract.md  (+1 more)
ai20k-ux-workshop/: CLAUDE.md  DOCUMENT.md  GUIDELINE.md  MOCK_INPUT.md  PRD.md  README.md  project-context.md  scispace_main_page_user_flow2.md
ai20k-ux-workshop/client/: index.html  package-lock.json  package.json
ai20k-ux-workshop/pattern-foundry/: README.md  consensus-audit.md  consensus-desktop-snapshot.md  consensus-dom-audit.json  consensus-mobile-390-snapshot.md  consensus-mobile-snapshot.md  consensus-redesign-handoff.md  consensus-sidebar-session-snapshot.md
ai20k-ux-workshop/server/: .env.example  package.json
core/: CLAUDE.md  README.md
core/_lumina/: manifest.json
lumina-wiki/: AGENTS.md  CLAUDE.md  README.md
lumina-wiki/_lumina/: manifest.json
scripts/: _pyrun.sh  log_antigravity.py  log_hook.py
src/core/: config.py
(+42 files in other folders)
